--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anchor",
-  "version": "0.11.6",
+  "version": "0.12.0",
   "description": "Recursive validation library with support for objects and lists",
   "homepage": "http://sailsjs.org",
   "keywords": [
@@ -32,7 +32,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "@mapbox/geojsonhint": "2.0.1",
-    "@sailshq/lodash": "^3.10.2",
+    "lodash": "^4.17.15",
     "validator": "4.4.0"
   },
   "devDependencies": {
